syntax = "proto3";

package zitadel.policy.v2alpha;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/policy/v2alpha;policy";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/duration.proto";

message LockoutPolicy {
    uint64 max_password_attempts = 1 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "Maximum password check attempts before the account gets locked. Attempts are reset as soon as the password is entered correctly or the password is reset. If set to 0 the account will never be locked."
            example: "\"10\""
        }
    ];
}
